Fixing issue on mobile nav when clicking 'work' tab

--- a/css/media.css
+++ b/css/media.css
@@ -259,6 +259,7 @@ h1.welcome-description {
   padding-left: calc(10% - 15px);
   -webkit-overflow-scrolling: touch;
   -moz-overflow-scrolling: touch;
+  max-height: 275px;
 }
 
 .scrolling-wrapper-flexbox::-webkit-scrollbar {
